# knowedgeQA

./: .gitattributes  .gitignore  AGENTS.md  README.md  package-lock.json
qa-knowledge-platform/: .env.dev  (+11 more)
qa-knowledge-platform/backend/: .dockerignore  BACKEND_SETUP_COMPLETE.md  Dockerfile  Dockerfile.dev  FILE_UPLOAD_IMPLEMENTATION.md  README.md  alembic.ini  debug_auth.py  pyproject.toml  test_fastapi.py
qa-knowledge-platform/backend/alembic/: env.py
qa-knowledge-platform/backend/alembic/versions/: 001_create_core_tables.py  20260627_add_saas_game_taxonomy.py  20260628_add_audit_logs.py  20260628_add_notification_governance.py  20260628_user_tokens.py  72a93e43c917_initial_migration.py  add_file_upload_tables.py  add_professional_fields.py
qa-knowledge-platform/backend/app/: main.py
qa-knowledge-platform/backend/app/api/v1/: auth.py  router.py
qa-knowledge-platform/backend/app/core/: celery_app.py  config.py  database.py  email.py  exceptions.py  health.py  logging.py  middleware.py  redis.py  security.py
qa-knowledge-platform/backend/app/modules/audit/: api.py  models.py  schemas.py  services.py
qa-knowledge-platform/backend/app/modules/files/: api.py  models.py  schemas.py  services.py  storage.py
qa-knowledge-platform/backend/docs/: database-setup.md  file-upload-system.md
qa-knowledge-platform/backend/scripts/: create_admin.py  init.sql  init_db.py  setup_test_db.py  test_file_upload.py  validate_database_design.py  validate_file_system.py
qa-knowledge-platform/backend/tests/: conftest.py  test_audit_api.py  test_auth.py  test_auth_simple.py  test_files.py  test_intelligence_api.py  test_knowledge_api.py  test_main.py  test_news_api.py  test_no_placeholder_api.py  test_notifications.py  test_pydantic_config.py  test_taxonomy.py  test_tools_api.py  test_users.py
(+112 files in other folders)
